[package]
name = "countries"
version = "0.1.0"
authors = ["rahulunair <rahulunair@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.38"
clap = "3.0.0-beta.2"
exitfailure = "0.5.1"
reqwest = { verison = "0.11.0", features = ["blocking"] }
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0.121"
serde_json = "1.0"
